<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GridBotFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textg1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/pmin"
                    android:inputType="numberDecimal"
                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textg2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/pmax"
                    android:inputType="numberDecimal"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textg3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/inversion"
                    android:inputType="numberDecimal"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textg4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/grid"
                    android:inputType="numberDecimal"
                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:hint="@string/Rango"
                    android:textAlignment="textEnd"
                    android:textSize="18sp" />/>

                <TextView
                    android:id="@+id/textVG6"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:hint="@string/nothing"
                    android:textAlignment="center"
                    android:textSize="18sp" />
                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"

                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:hint="@string/cgrid"
                    android:textAlignment="textEnd"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textVG1"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:hint="@string/nothing"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:hint="@string/porgrid"
                    android:textAlignment="textEnd"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textVG2"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:hint="@string/nothing"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:hint="@string/ggrid"
                    android:textAlignment="textEnd"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textVG3"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:hint="@string/nothing"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:hint="@string/porcentaje"
                    android:textAlignment="textEnd"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textVG4"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:hint="@string/nothing"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:hint="@string/stoplossa"
                    android:textAlignment="textEnd"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textVG5"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:hint="@string/nothing"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btshow"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/buttons"
                    android:text="@string/show"
                    android:textColor="@color/cardview_light_background" />

                <Button
                    android:id="@+id/buttonclean"
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/buttons"
                    android:text="@string/clean"
                    android:textColor="@color/cardview_light_background" />
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>